# AutonomousRobotics

./: .gitignore  README.md
ros2_ws/: frames_2026-04-28_12.08.24.gv  frames_2026-04-28_12.27.43.gv  uwb_anchors_leica.yaml
ros2_ws/src/: .gitignore
ros2_ws/src/ar_loc_base/: setup.py
ros2_ws/src/ar_loc_base/ar_loc_base/: rover_kf.py  rover_loc.py  rover_odo.py  rover_pf.py  tb_loc.py
ros2_ws/src/ar_loc_base/launch/: ar_loc_only.launch.py  ar_loc_only_tb.launch.py  ar_loc_tb.launch.py
ros2_ws/src/ar_mapping_base/ar_mapping_base/: mapping_kf.py
ros2_ws/src/ar_slam_base/ar_slam_base/: mapping_kf.py  rover_mapping.py
ros2_ws/src/ar_slam_base/launch/: aruco_tracker_tb.yaml  tb_slam_env.launch.py
ros2_ws/src/collision_avoidance_base/launch/: ca.launch.py  ca_auto.launch.py  ca_teleop.launch.py  ca_turtle.launch.py  teleop_turtle.launch.py
ros2_ws/src/collision_avoidance_base/src/: collision_avoidance.cpp
ros2_ws/src/face_detect/: package.xml  setup.py
ros2_ws/src/face_detect/face_detect/: face_detect_node.py
ros2_ws/src/face_detect/launch/: face_detect.launch.py
ros2_ws/src/floor_nav/: CMakeLists.txt  package.xml
ros2_ws/src/floor_nav/launch/: autonomous_mission.launch.py  launch_rover.launch.py  launch_server_tb.launch.py  turtlebot_task_manager.launch.py
ros2_ws/src/floor_nav/missions/: dock_toggle_button.py  exploration.py  explore_dock_loop.py  mission_autodock.py  mission_dedock_move_dock.py  mission_explore.py  mission_forward_backward.py  mission_save_return.py  mission_wander_return.py  test_goto.py  test_gotopose.py  test_people_finder.py  test_rover_holonomic.py  test_wander.py
ros2_ws/src/floor_nav/tasks/: TaskGoTo.cpp  TaskGoTo.h  TaskGoToPose.cpp  TaskGoToPose.h  TaskStareAtFace.cpp  TaskStareAtFace.h  TaskWaitForFace.cpp  TaskWaitForFace.h
ros2_ws/src/leica_pts_parser/data/: GTE ROBOTS.xml  GTE_Robots.launch.py  uwb_anchors_leica.yaml
ros2_ws/src/leica_pts_parser/leica_pts_parser/: CMakeLists.txt  package.xml
ros2_ws/src/leica_pts_parser/leica_pts_parser/data/: lab.launch.py  lab.names  lab.xml  uwb_anchors_leica.yaml
ros2_ws/src/leica_pts_parser/leica_pts_parser/data/lab_xml/: lab_160124_144237.sdb
ros2_ws/src/leica_pts_parser/leica_pts_parser/include/leica_pts_parser/: SDBParser.h  XMLParser.h  leica_point_type.h
ros2_ws/src/leica_pts_parser/leica_pts_parser/src/: leica_pts_parser_node.cpp
ros2_ws/src/leica_pts_parser/leica_pts_parser_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/leica_pts_parser/leica_pts_parser_msgs/msg/: ColoredMeshGeometryStamped.msg
ros2_ws/src/leica_pts_parser/leica_pts_parser_msgs/srv/: GetColoredGeometry.srv
ros2_ws/src/leica_pts_parser/mesh_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/obstacle_avoidance_base/: CMakeLists.txt
ros2_ws/src/obstacle_avoidance_base/launch/: teleop_mux_oa.launch.py  teleop_mux_planner_oa.launch.py
ros2_ws/src/obstacle_avoidance_base/src/: obstacle_avoidance.cpp
ros2_ws/src/occgrid_planner_base/: CMakeLists.txt
ros2_ws/src/occgrid_planner_base/launch/: planner.launch.py  slam_online_sync.launch.py  slam_tb_sync.launch.py
ros2_ws/src/occgrid_planner_base/src/: occgrid_planner.cpp  path_follower.cpp  path_optimizer.cpp
ros2_ws/src/ros_task_manager/src/task_manager_nav2/: CMakeLists.txt
ros2_ws/src/rover_driver_base/launch/: rover_odom.launch.py
ros2_ws/src/rover_driver_base/rover_driver_base/: rover_kinematics.py
ros2_ws/src/tf_recorder/: package.xml  setup.cfg  setup.py
ros2_ws/src/tf_recorder/launch/: tf_recorder.launch.py
ros2_ws/src/tf_recorder/tf_recorder/: recorder_node.py
ros2_ws/src/turtlebot_launch/: CMakeLists.txt
ros2_ws/src/turtlebot_launch/config/: network_bridge_tcp_client.yaml  network_bridge_tcp_server.yaml
ros2_ws/src/turtlebot_launch/launch/: GTE_Robots.launch.py  aruco_tracker.launch.py  aruco_tracker_tb.yaml  kinect_bag_republish.launch.py  mapper_params_cs_sync.yaml  mapper_params_tb_sync.yaml  network_bridge_client.launch.py  network_bridge_server.launch.py  slam_tb_sync.launch.py
ros2_ws/src/turtlebot_launch/urdf/: turtlebot_calibration.xacro
ros2_ws/src/vrep_ros_teleop/launch/: teleop_joy_only.launch.py  teleop_mux.launch.py  teleop_mux_tb.launch.py
ros2_ws/src/wifi_map_base/: CMakeLists.txt
ros2_ws/src/wifi_map_base/launch/: wifi_map.launch.py
ros2_ws/src/wpa_cli/launch/: wpa_cli.launch.py
